<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_normal_page"
    tools:context=".view.ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_back"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@+id/loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.145" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="29dp"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="50dp"
                android:paddingStart="12dp"
                android:text="@string/account"
                android:textColor="@color/MainTextColor"
                android:textSize="26sp"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_username"
                style="@style/MaterialTextfieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/accountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:hint="@string/enter_account"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:autofillHints="username"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="5dp"
                android:paddingStart="12dp"
                android:text="@string/password"
                android:textColor="@color/MainTextColor"
                android:textSize="26sp"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/MaterialTextfieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:passwordToggleEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="password"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                style="@style/Theme.Usrcare.Login"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="15dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:backgroundTint="@color/MainButtonColor"
                app:cornerRadius="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/forgetPasswordButton"
                style="@style/Theme.Usrcare.Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/forgot_password"
                android:textColor="@color/MainTextColor"
                android:textSize="22sp"
                app:cornerRadius="8dp" />

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="178dp"
            android:layout_height="178dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="loading.json"
            app:lottie_loop="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>