<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_page"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_page"
    >

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="dev_logout"
        android:id="@+id/dev_logout"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="USER_NAME"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.149" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/edit_personal_info"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/MainButtonColor"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/materialTextView"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/materialTextView"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView"
        app:layout_constraintVertical_bias="0.039"
        app:layout_constraintWidth_percent="0.41" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign"
        style="@style/btn_main_one_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/white"
        android:elevation="8dp"
        android:text="@string/sign_sign_happy"
        android:textColor="@color/btnSignsignhappyColor"
        app:icon="@drawable/ic_signsignhappy"
        app:iconTint="@color/btnSignsignhappyColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357"
        app:layout_constraintWidth_percent="0.4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dailyTask"
        style="@style/btn_main_one_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/white"
        android:elevation="8dp"
        android:text="@string/daily_task"
        android:textColor="@color/btnDailyTaskColor"
        app:icon="@drawable/ic_dailytask"
        app:iconTint="@color/btnDailyTaskColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357"
        app:layout_constraintWidth_percent="0.4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_brain_game"
        style="@style/btn_main_three_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/white"
        android:elevation="8dp"
        android:text="@string/brain_game"
        android:textColor="@color/btnBrainGameColor"
        app:icon="@drawable/ic_game"
        app:iconTint="@color/btnBrainGameColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign"
        app:layout_constraintHeight_percent="0.16"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_sign"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign"
        app:layout_constraintVertical_bias="0.041"
        app:layout_constraintWidth_percent="0.4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ai_vitality_detection"
        style="@style/btn_main_three_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/white"
        android:elevation="8dp"
        android:text="@string/AI_vitality_detection"
        android:textColor="@color/btnAiVitalityDetection"
        app:icon="@drawable/ic_aivitalitydetection"
        app:iconTint="@color/btnAiVitalityDetection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign"
        app:layout_constraintHeight_percent="0.16"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_sign"
        app:layout_constraintTop_toBottomOf="@+id/btn_brain_game"
        app:layout_constraintVertical_bias="0.071"
        app:layout_constraintWidth_percent="0.4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Saturday_KTV"
        style="@style/btn_main_three_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/white"
        android:elevation="8dp"
        android:text="@string/saturday_KTV"
        android:textColor="@color/btnSatKTVColor"
        app:icon="@drawable/ic_ktv"
        app:iconTint="@color/btnSatKTVColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign"
        app:layout_constraintHeight_percent="0.16"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_sign"
        app:layout_constraintTop_toBottomOf="@+id/btn_ai_vitality_detection"
        app:layout_constraintVertical_bias="0.316"
        app:layout_constraintWidth_percent="0.4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_pet_company"
        style="@style/btn_main_three_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/white"
        android:elevation="8dp"
        android:text="@string/pet_company"
        android:textColor="@color/btnPetcompanyColor"
        app:icon="@drawable/ic_petcompany"
        app:iconTint="@color/btnPetcompanyColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_dailyTask"
        app:layout_constraintHeight_percent="0.16"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_dailyTask"
        app:layout_constraintTop_toBottomOf="@+id/btn_dailyTask"
        app:layout_constraintVertical_bias="0.041"
        app:layout_constraintWidth_percent="0.4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_clock_reminder"
        style="@style/btn_main_three_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/white"
        android:elevation="8dp"
        android:text="@string/clock_reminder"
        android:textColor="@color/btnClockColor"
        app:icon="@drawable/ic_clocknotice"
        app:iconTint="@color/btnClockColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_dailyTask"
        app:layout_constraintHeight_percent="0.16"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_dailyTask"
        app:layout_constraintTop_toBottomOf="@+id/btn_pet_company"
        app:layout_constraintVertical_bias="0.071"
        app:layout_constraintWidth_percent="0.4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_mood_scale"
        style="@style/btn_main_three_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/white"
        android:elevation="8dp"
        android:text="@string/mood_scale"
        android:textColor="@color/btnMoodScaleColor"
        app:icon="@drawable/ic_moodscale"
        app:iconTint="@color/btnMoodScaleColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_dailyTask"
        app:layout_constraintHeight_percent="0.16"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_dailyTask"
        app:layout_constraintTop_toBottomOf="@+id/btn_clock_reminder"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>