<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.login.SignUpEmailFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_normal_page"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_back"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@+id/loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.145" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="29dp"
            >
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/email"
                android:textSize="26sp"
                android:textColor="@color/MainTextColor"
                android:layout_gravity="top"
                android:paddingStart="12dp"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/enter_email"
                style="@style/MaterialTextfieldStyle"
                android:layout_marginTop="3dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/accountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textNoSuggestions"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/Theme.Usrcare.Login"
                android:id="@+id/btn_Next"
                android:layout_height="65dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:backgroundTint="@color/MainButtonColor"
                app:cornerRadius="8dp" />


        </LinearLayout>
        <com.airbnb.lottie.LottieAnimationView
            android:visibility="invisible"
            android:layout_width="178dp"
            android:layout_height="178dp"
            android:id="@+id/loading"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_fileName="loading.json"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>